# interface

./: README.md  dish_ingredient_nutrition.py  pyproject.toml
.github/workflows/: ci.yml
meal_dish/: DishFormatting.py  Dish_Info_Modification.py  MealFormatting.py  hooks.py  modules.txt
meal_dish/meal_dish_interface/: utils.py
meal_dish/meal_dish_interface/doctype/dish/: dish.js  dish.json  dish.py  test_dish.py
meal_dish/meal_dish_interface/doctype/dish_child_table/: dish_child_table.json  dish_child_table.py
meal_dish/meal_dish_interface/doctype/health_and_ayurveda_tags__childtable/: health_and_ayurveda_tags__childtable.json  health_and_ayurveda_tags__childtable.py
meal_dish/meal_dish_interface/doctype/ingredients/: ingredients.js  ingredients.json  ingredients.py  test_ingredients.py
meal_dish/meal_dish_interface/doctype/ingredients_child_table/: ingredients_child_table.json  ingredients_child_table.py
meal_dish/meal_dish_interface/doctype/lavi_dish_ingredient_nutrition/: lavi_dish_ingredient_nutrition.js  lavi_dish_ingredient_nutrition.json  lavi_dish_ingredient_nutrition.py  test_lavi_dish_ingredient_nutrition.py
meal_dish/meal_dish_interface/doctype/lavi_dish_ingredient_nutrition_child/: lavi_dish_ingredient_nutrition_child.json  lavi_dish_ingredient_nutrition_child.py
meal_dish/meal_dish_interface/doctype/lavi_dish_ingredient_nutrition_child_2/: lavi_dish_ingredient_nutrition_child_2.json  lavi_dish_ingredient_nutrition_child_2.py
meal_dish/meal_dish_interface/doctype/meal/: meal.js  meal.py  (+2 more)
meal_dish/meal_dish_interface/workspace/: utils.py
(+28 files in other folders)
